--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./src/output.css">
@@ -16,55 +18,79 @@
   </style>
   -->
 </head>
+
 <body>
-  About
-  Services
-  Projects
-  Contact
 
-  We are creatives
+  <header>
+    <a><img src="logo.svg" alt="sunny side logo"></a>
+    <nav>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Projects</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+  <section class="hero">
+    <h1>We are creatives</h1>
+  </section>
 
+  <section class="transform"">
   Transform your brand
 
   We are a full-service creative agency specializing in helping brands grow fast. 
   Engage your clients through compelling visuals that do most of the marketing for you.
 
   Learn more
+</section>
+<section class=" standout">
+    Stand out to the right audience
 
-  Stand out to the right audience
+    Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build
+    and extend your brand in digital places.
 
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. 
+    Learn more
+  </section>
+  <section class="graphic">
+    Graphic design
+    Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential
+    clients’ attention.
 
-  Learn more
+    Photography
+    Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+  </section>
+  <section class="testimonial">
+    Client testimonials
 
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
+    We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
+    Emily R.
+    Marketing Director
 
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+    Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable
+    experience.
+    Thomas S.
+    Chief Operating Officer
 
-  Client testimonials
+    Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
+    Jennie F.
+    Business Owner
+  </section>
 
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
+  <section class="images">
 
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-
-  About
-  Services
-  Projects
-  Contact
+  </section>
+  <footer>
+    <nav>
+      About
+      Services
+      Projects
+      Contact
+    </nav>
+  </footer>
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
