--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
 <body>
 
-  <header>
-    <a><img src="logo.svg" alt="sunny side logo"></a>
-    <nav>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Projects</a>
-      <a href="#">Contact</a>
+  <header class="bg-cyan-500 text-white flex justify-between px-6 py-8 align-middle">
+    <a><img src="./images/logo.svg" class="align-middle" alt="sunny side logo"></a>
+    <nav class="flex space-x-6 text-lg">
+      <a href="#" class="hover:bg-cyan-300 py-2 px-5 rounded-full">About</a>
+      <a href="#" class="hover:bg-cyan-300 py-2 px-5 rounded-full">Services</a>
+      <a href="#" class="hover:bg-cyan-300 py-2 px-5 rounded-full">Projects</a>
+      <a href="#" class="rounded-full bg-white text-black px-5 hover:bg-cyan-300 p-2">Contact</a>
     </nav>
   </header>
   <section class="hero">
