--- a/index.html
+++ b/index.html
@@ -54,15 +54,37 @@
     <h1>We are creatives</h1>
   </section>
 
-  <section class="transform"">
+<section class="transform"">
+  <div>
   Transform your brand
 
   We are a full-service creative agency specializing in helping brands grow fast. 
   Engage your clients through compelling visuals that do most of the marketing for you.
 
-  Learn more
+  <a href="" class="
+    font-black
+    font-headings
+    uppercase
+    inline
+    relative z-0
+    after:content-['']
+    after:absolute 
+    after:left-[-10%]
+    after:bottom-[-2px]
+    after:w-[110%] after:h-2
+    after:bg-yellow-500
+    after:rounded-lg
+    after:-z-10
+    
+    after:opacity-0
+    after:transition-all 
+    after:duration-1000
+    hover:after:opacity-100">Learn more</a>
+  </div>
+  <img>
 </section>
 <section class=" standout">
+  <div>
     Stand out to the right audience
 
     Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build
@@ -87,33 +109,55 @@
     after:transition-all 
     after:duration-1000
     hover:after:opacity-100">Learn more</a>
+  </div>
+  <img>
   </section>
+
   <section class="graphic">
+    <div>
     Graphic design
     Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential
     clients’ attention.
-
+    </div>
+    <div>
     Photography
     Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
+    </div>
   </section>
   <section class="testimonial">
     Client testimonials
+    <div>
 
-    We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-    Emily R.
-    Marketing Director
+      <div>
+        <img>
+      <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+      <h2>Emily R.</h2>
+      <h3>Marketing Director</h3>
+      </div>
 
-    Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable
-    experience.
-    Thomas S.
-    Chief Operating Officer
+      <div>
+        <img>
+      <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable
+      experience.</p>
+      <h2>Thomas S.</h2>
+      Chief Operating Officer
+      </div>
 
-    Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-    Jennie F.
-    Business Owner
+      <div>
+        <img>
+      <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+      <h2>Jennie F.</h2>
+      <h3>Business Owner</h3>
+      </div>
+
+    </div>
   </section>
 
   <section class="images">
+    <img>
+    <img>
+    <img>
+    <img>
 
   </section>
   <footer>
