--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <img src="images/icon-arrow-down.svg" class="mx-auto mt-20">
   </section>
 
+
 <section class="transform flex bg-neutral-white">
 
   <div class="flex-1 self-center">
@@ -129,10 +130,9 @@
       hover:after:opacity-100">Learn more</a>
     </div>
   </div>
-  
   </section>
 
-  <section class="flex graphic text-center">
+<section class="flex graphic text-center">
     <div class="flex-1 relative">
         <img class="w-full h-full" srcset="images/desktop/image-graphic-design.jpg 400w, images/mobile/image-graphic-design.jpg 200w">
           <div class="absolute bottom-1/5 px-10 w-full flex flex-col gap-8">
@@ -149,18 +149,19 @@
       </div>
     </div>
   </section>
-  <section class="testimonial flex flex-col text-center">
-    Client testimonials
-    <div class="flex flex-row">
+  
+<section class="testimonial flex flex-col text-center gap-9 py-20 px-10 mx-20 h-[30vw] bg-neutral-white items-center">
+    <h1 class="flex-1">Client testimonials</h1>
+    <div class="flex-4 flex flex-row gap-32 justify-between w-4/5">
 
-      <div>
+      <div class="flex flex-col gap-5 w-2/5">
         <img src="images/image-emily.jpg" class="rounded-full object-center mx-auto" >
       <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
       <h2>Emily R.</h2>
       <h3>Marketing Director</h3>
       </div>
 
-      <div>
+      <div class="flex flex-col gap-5 w-2/5">
         <img src="images/image-thomas.jpg" class="rounded-full object-center mx-auto">
       <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable
       experience.</p>
@@ -168,7 +169,7 @@
       Chief Operating Officer
       </div>
 
-      <div>
+      <div class="flex flex-col gap-5 w-2/5">
         <img src="images/image-jennie.jpg" class="rounded-full object-center mx-auto">
       <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
       <h2>Jennie F.</h2>
