Font and a bit of fixing

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="#" class="text-neutral-grey-550">About</a>
       <a href="#" class="text-neutral-grey-550">Services</a>
       <a href="#" class="text-neutral-grey-550">Projects</a>
-      <a href="#" class="p-4 rounded-full bg-primary-yellow text-black px-5">Contact</a>
+      <a href="#" class="p-4 rounded-full bg-primary-yellow font-heading text-black px-5">Contact</a>
     </nav>
     </div>
   </header>
@@ -63,10 +63,10 @@
 
   <div class="flex-1 self-center">
     <div class="flex flex-col px-10 mx-10 gap-8">
-      <h1 class="text-4xl text-primary-blue-dark">Transform your brand</h1>
+      <h1 class="text-4xl text-primary-blue-dark font-heading">Transform your brand</h1>
 
-      <pclass="text-neutral-grey-550">We are a full-service creative agency specializing in helping brands grow fast. 
-      Engage your clients through compelling visuals that do most of the marketing for you.</pclass=>
+      <p class="text-neutral-grey-550">We are a full-service creative agency specializing in helping brands grow fast. 
+      Engage your clients through compelling visuals that do most of the marketing for you.</p>
 
       <a href="" class="
         font-black
@@ -106,7 +106,7 @@
 
   <div class="flex-1 self-center">
     <div class="flex flex-col px-10 mx-10 gap-8">
-      <h1 class="text-4xl text-primary-blue-dark">Stand out to the right audience</h1>
+      <h1 class="text-4xl text-primary-blue-dark font-heading">Stand out to the right audience</h1>
 
       <p class="text-neutral-grey-550">Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build
       and extend your brand in digital places.</p>
@@ -139,7 +139,7 @@
     <div class="flex-1 relative">
         <img class="w-full h-full" srcset="images/desktop/image-graphic-design.jpg 400w, images/mobile/image-graphic-design.jpg 200w">
           <div class="absolute bottom-1/5 px-10 w-full flex flex-col gap-8">
-            <h2 class="text-4xl text-primary-green-dark">Graphic design</h2>
+            <h2 class="text-4xl text-primary-green-dark font-heading">Graphic design</h2>
             <p class="text-primary-green-dark opacity-90">Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential
             clients’ attention.</p>
           </div>
@@ -147,7 +147,7 @@
     <div class="flex-1 relative">
       <img class="w-full h-full" srcset="images/desktop/image-photography.jpg 400w, images/mobile/image-photography.jpg 200w">
       <div class="absolute bottom-1/5 px-10 w-full flex flex-col gap-8">
-        <h2 class="text-4xl text-primary-blue-dark">Photography</h2>
+        <h2 class="text-4xl text-primary-blue-dark font-heading">Photography</h2>
         <p class="text-primary-blue-dark opacity-90">Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
       </div>
     </div>
